...
    <!-- Main VLC Interface -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="app_name" translatable="false">VLC</string>
    <string name="other">Other</string>
    <string name="sortby">Sort by…</string>
    <string name="sortby_name">Name</string>
    <string name="sortby_filename">File name</string>
    <string name="sortby_artist_name">Artist name</string>
    <string name="sortby_album_name">Album name</string>
    <string name="sortby_length">Length</string>
    <string name="sortby_date">Date</string>
    <string name="sortby_last_modified_date">Recently added</string>
...

    <plurals name="search_found_results_quantity">
        <item quantity="one">%d result found</item>
        <item quantity="other">%d results found</item>
    </plurals>

    <string name="play">Play</string>
    <string name="quick_play">Quick play</string>
    <string name="playback">Playback</string>
    <string name="playback_controls">Playback controls</string>
    <string name="medialibrary_scan">Media library scan</string>
    <string name="Medialibrary_progress">Media library scanning progress updates</string>
    <string name="play_from_start">Play from start</string>
...
    <string name="play_as_video">Play as video</string>
    <string name="return_to_video">Long tap the cover to restore the video</string>
    <string name="video_app_switch_title">Background/PiP mode</string>
    <string name="video_app_switch_summary">Select VLC behavior when you switch to other application from video playback</string>
    <string name="play_pip_title">Play videos in Picture-in-picture mode</string>
    <string name="play_as_audio_background">Play videos in background</string>
    <string name="append">Add to play queue</string>
    <string name="insert_next">Insert next</string>
    <string name="play_all">Play all</string>
    <string name="append_all">Append all</string>
    <string name="resume_playback_short_title">Resume playback</string>
    <string name="resume_playback_long_title"> Resume playback of last playlist</string>
    <string name="resume_audio_playback_short_title">Resume audio playback</string>
    <string name="resume_audio_playback_long_title"> Resume playback of last audio playlist</string>
    <string name="resume_playback_error">Nothing to resume</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="set_song">Set as ringtone</string>
    <string name="set_song_question">Set \'%1$s\' as ringtone?</string>
    <string name="info">Information</string>
    <string name="confirm_delete">Delete the file \'%1$s\'?</string>
    <string name="confirm_replace_playlist">Are you sure you want to replace the playlist \'%1$s\'?</string>
...
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="equalizer">Equalizer</string>
    <string name="all_albums">All albums</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>
    <string name="title">Title</string>
    <string name="directories">Directories</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait…</string>
    <string name="nomedia">No media files found, please transfer some files to your device or adjust your preferences.</string>
    <string name="nomedia_audio">No audio found</string>
    <string name="nomedia_video">No video found</string>
    <string name="nomedia_folders">No folders found</string>
...
    <string name="surface_best_fit">Best fit</string>
    <string name="surface_fit_screen">Fit screen</string>
    <string name="surface_fill">Fill</string>
    <string name="surface_original">Center</string>
    <string name="resize_tip">Long tap for more options</string>
    <string name="unseekable_stream">Unseekable stream</string>
    <string name="refresh">Refresh</string>
    <string name="track_audio">Audio track</string>
    <string name="track_video">Video track</string>
    <string name="track_text">Subtitle track</string>
    <string name="track_unknown">Unknown track</string>
    <string name="track_bitrate_info">Bitrate: %1$s/s\n</string>
    <string name="track_codec_info">Codec: %1$s\n</string>
...
    <string name="opengl_on">Force On</string>
    <string name="opengl_off">Force Off</string>
    <string name="network_favorites">Network favorites</string>
    <string name="network_shared_folders">Shared folders</string>
    <string name="encryption_warning">Warning, encryption is not available for this Android version, password will be stored in a private space but not encrypted</string>
    <string name="store_password">Remember password</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="popup_playback_title">Play video in a Pop-Up window</string>
    <string name="popup_playback">Playing in a Pop-Up window</string>
    <string name="popup_expand">Expand video</string>
    <string name="download_subtitles">Download subtitles</string>
    <string name="powered_opensubtitles">Powered by OpenSubtitles</string>
    <string name="open_subtitles_not_logged_in">You are not logged into OpenSubtitles\nLogging in will grant you access to more downloads</string>
...
