<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_mode_audio_info"
            android:icon="@drawable/ic_information"
            android:title="@string/info"
            app:showAsAction="always" />
    <item
            android:id="@+id/action_mode_audio_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share"
            app:showAsAction="always" />
    <item
            android:id="@+id/action_mode_audio_play"
            android:icon="@drawable/ic_play"
            android:title="@string/play"
            app:showAsAction="always" />
<!--    <item-->
<!--            android:id="@+id/action_mode_favorite_add"-->
<!--            android:icon="@drawable/ic_fav_add"-->
...
