...
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@{item.title}"
            tools:text="Like A Rolling Stone"
            vlc:layout_constraintBottom_toTopOf="@id/subtitle"
            vlc:layout_constraintEnd_toStartOf="@id/media_absent"
            vlc:layout_constraintStart_toEndOf="@id/track_number"
            vlc:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitle"
...
            android:id="@+id/media_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:visibility="@{isFavorite ? View.VISIBLE : View.GONE}"
            vlc:layout_constraintBottom_toTopOf="@+id/media_network"
            vlc:layout_constraintEnd_toStartOf="@id/item_more"
            vlc:layout_constraintTop_toTopOf="parent"
            vlc:layout_constraintVertical_chainStyle="packed"
            vlc:srcCompat="@drawable/ic_emoji_favorite" />

        <ImageView
            android:id="@+id/media_network"
...
